--- a/src/app/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
+++ b/src/app/dashboard/components/dashboard-sidebar/dashboard-sidebar.component.html
@@ -1,5 +1,7 @@
 <aside>
-  <p [routerLink]="['/' , 'pages']"> Menu </p>
+  <a [routerLink]="['/' , 'pages']" >
+    <i class="fa fa-laptop" aria-hidden="true"></i>
+    Home  </a>
   <a [routerLink]="['product-management']" >
     <i class="fa fa-laptop" aria-hidden="true"></i>
     Product Management  </a>
