--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.html
@@ -1,7 +1,7 @@
 <div
   class="surface-section px-4 py-8 md:px-6 lg:px-8 border-1 surface-border border-round"
 >
-  <div class="text-900 font-medium text-4xl mb-4">{{'favoritesForm.populerText' | transloco}}</div>
+  <div class="text-900 font-medium text-4xl mb-4">{{'favoritesForm.header' | transloco}}</div>
   <div class="grid -mt-3 -ml-3 -mr-3">
     <div class="col-12 md:col-6 lg:col-4" *ngFor="let product of product">
 
