--- a/src/app/home/reset-password/reset-password.component.scss
+++ b/src/app/home/reset-password/reset-password.component.scss
@@ -9,7 +9,8 @@ $background-color: #ecf0f1;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 100vh;
+  min-height: 60vh;
+  max-height: auto;
 
 
   form {
@@ -26,7 +27,7 @@ $background-color: #ecf0f1;
         margin-bottom: 20px;
       }
 
-  
+
 
       .p-float-label {
         position: relative;
@@ -82,7 +83,7 @@ $background-color: #ecf0f1;
         justify-content: center;
         align-items: center;
         margin-top: 20px;
-  
+
         button {
           width: 100%;
           padding: 15px;
@@ -96,7 +97,7 @@ $background-color: #ecf0f1;
           border-radius: 4px;
           cursor: pointer;
           transition: background-color 0.3s;
-  
+
           &:hover {
             background-color: $secondary-color;
           }
@@ -123,7 +124,7 @@ $background-color: #ecf0f1;
       }
     }
 
-    
+
 
     .register-span {
       margin-top: 10px;
