--- a/src/app/home/register/register.component.scss
+++ b/src/app/home/register/register.component.scss
@@ -9,7 +9,7 @@ $background-color: #ecf0f1;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-height: 200vh;
+  max-height: auto;
 
   form {
     width: 100%;
