--- a/src/app/pages/components/product/card-element/card-element.component.html
+++ b/src/app/pages/components/product/card-element/card-element.component.html
@@ -5,7 +5,7 @@
       <img src="assets/images/OI_logo.png" alt="Orion Logo"/>
     </div>
     <ul class="sidebar-menu">
-      <li class="sidebar-menu-item">Kategoriler
+      <li class="sidebar-menu-item">{{'cardElementForm.category' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (click)="filterByCategory('19-20')"> 19-20</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('19-22')"> 19-22</label></li>
@@ -15,24 +15,24 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Avantajlı Ürünler
+      <li class="sidebar-menu-item">{{'cardElementForm.advantage' | transloco}}
         <ul class="sub-menu">
-          <li><label><input type="checkbox" (change)="filterByCategory('electronics')"> Elektronik</label></li>
-          <li><label><input type="checkbox" (change)="filterByCategory('clothing')"> Giyim</label></li>
+          <li><label><input type="checkbox" (change)="filterByCategory('electronics')"> {{'cardElementForm.electronics' | transloco}}</label></li>
+          <li><label><input type="checkbox" (change)="filterByCategory('clothing')"> {{'cardElementForm.clothing' | transloco}}</label></li>
           <!-- Diğer avantajlı ürün kategorileri burada -->
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Cinsiyet
+      <li class="sidebar-menu-item">{{'cardElementForm.gender' | transloco}}
         <ul class="sub-menu">
-          <li><label><input type="checkbox" (change)="filterByCategory('male')"> Erkek</label></li>
-          <li><label><input type="checkbox" (change)="filterByCategory('female')"> Kadın</label></li>
-          <li><label><input type="checkbox" (change)="filterByCategory('unisex')"> Unisex</label></li>
+          <li><label><input type="checkbox" (change)="filterByCategory('male')"> {{'cardElementForm.male' | transloco}}</label></li>
+          <li><label><input type="checkbox" (change)="filterByCategory('female')"> {{'cardElementForm.female' | transloco}}</label></li>
+          <li><label><input type="checkbox" (change)="filterByCategory('unisex')"> {{'cardElementForm.unisex' | transloco}}</label></li>
           <!-- Diğer cinsiyet seçenekleri burada -->
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Fiyat Aralığı
+      <li class="sidebar-menu-item">{{'cardElementForm.price' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('0-50')"> 0-50 TL</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('51-100')"> 51-100 TL</label></li>
@@ -41,7 +41,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Renk
+      <li class="sidebar-menu-item">{{'cardElementForm.color' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('red')"> Kırmızı</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('blue')"> Mavi</label></li>
@@ -50,7 +50,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Materyal
+      <li class="sidebar-menu-item">{{'cardElementForm.material' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('cotton')"> Pamuk</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('leather')"> Deri</label></li>
@@ -60,7 +60,7 @@
       </li>
 
       <!-- Diğer özellikler -->
-      <li class="sidebar-menu-item">Ek Özellik
+      <li class="sidebar-menu-item">{{'cardElementForm.property' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('waterproof')"> Su Geçirmez</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('adjustable')"> Ayarlanabilir</label></li>
@@ -68,7 +68,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Kullanım Alanı
+      <li class="sidebar-menu-item">{{'cardElementForm.usearea' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('sports')"> Spor</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('casual')"> Günlük Kullanım</label></li>
@@ -76,7 +76,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Satıcı Tipi
+      <li class="sidebar-menu-item">{{'cardElementForm.buyertype' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('official-store')"> Resmi Mağaza</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('marketplace')"> Pazaryeri Satıcısı</label></li>
@@ -84,7 +84,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Topuk Boyu
+      <li class="sidebar-menu-item">{{'cardElementForm.size' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('low')"> Düşük</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('medium')"> Orta</label></li>
@@ -93,7 +93,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Bağlama Şekli
+      <li class="sidebar-menu-item">{{'cardElementForm.bsize' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('laces')"> Bağcıklı</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('zipper')"> Fermuarlı</label></li>
@@ -101,7 +101,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Fenomenlerin Seçtikleri
+      <li class="sidebar-menu-item">{{'cardElementForm.fenomen' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('celebrity-picks')"> Ünlülerin Tercihleri</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('influencer-picks')"> Etkileyicilerin Tercihleri</label></li>
@@ -109,7 +109,7 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Taban Materyali
+      <li class="sidebar-menu-item">{{'cardElementForm.taban' | transloco}}
         <ul class="sub-menu">
           <li><label><input type="checkbox" (change)="filterByCategory('rubber')"> Lastik</label></li>
           <li><label><input type="checkbox" (change)="filterByCategory('leather')"> Deri</label></li>
@@ -117,8 +117,8 @@
         </ul>
       </li>
 
-      <li class="sidebar-menu-item">Fiyat Geçmişi</li>
-      <li class="sidebar-menu-item">Ortam</li>
+      <li class="sidebar-menu-item">{{'cardElementForm.priceHistory' | transloco}}</li>
+      <li class="sidebar-menu-item">{{'cardElementForm.region' | transloco}}</li>
     </ul>
   </div>
 </div>
