--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="flex flex-row search">
+  <div class="block search">
     <div class="p-input-icon-left search-text mr-3">
       <i class="pi pi-search"></i>
       <input
@@ -22,76 +22,6 @@
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 25, 50]"
   >
-    <ng-template pTemplate="header">
-      <div class="flex justify-content-end">
-        <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
-      </div>
-    </ng-template>
-    <ng-template let-product pTemplate="listItem">
-      <div class="col-12">
-        <a
-          [routerLink]="['/pages/product', product.id]"
-          class="product-id"
-        >
-          <div
-            class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4"
-          >
-            <div
-              class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4"
-            >
-              <div
-                class="flex flex-column align-items-center sm:align-items-start gap-3"
-              >
-                <img
-                  class="shadow-2 border-round"
-                  [src]="getFileUrl(product?.file)"
-                  [alt]="product?.name"
-                  width="250px"
-                  height="200px"
-                />
-                <div class="text-2xl font-bold text-900">
-                  {{ product?.name }}
-                </div>
-                <p-rating
-                  [ngModel]="product?.valueRating"
-                  [readonly]="true"
-                  [cancel]="false"
-                ></p-rating>
-                <div class="flex align-items-center gap-3">
-                  <span class="flex align-items-center gap-2">
-                    <i class="pi pi-tag"></i>
-                    <span class="font-semibold">{{ product?.category.name }}</span>
-                  </span>
-                  <p-tag
-                    [value]="product?.selectedStatus.name"
-                    [severity]="getSeverity(product)"
-                  ></p-tag>
-                </div>
-              </div>
-              <div>
-                <h6 class="mb-3 mt-3 font-bold">{{product?.companyName}}</h6>
-                <p class="line-height-base">
-                  {{ product?.description }}
-                </p>
-              </div>
-              <div
-                class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2"
-              >
-                <span class="text-2xl font-semibold">{{
-                  "$" + product?.priceStacked
-                }}</span>
-                <button
-                  pButton
-                  icon="pi pi-shopping-cart"
-                  class="md:align-self-end mb-2 p-button-rounded"
-                  [disabled]="product?.selectedStatus.name === 'OUTOFSTOCK'"
-                ></button>
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-    </ng-template>
     <ng-template let-product pTemplate="gridItem">
       <div class="col-12 sm:col-6 lg:col-12 xl:col-4 p-2 product-card">
         <a [routerLink]="['/pages/product', product.id]" class="product-id">
@@ -125,11 +55,6 @@
             </div>
             <div>
               <h6 class="mb-3 mt-3 font-bold">{{ product?.companyName }}</h6>
-             <div class="description">
-              <p class="line-height-base">
-                {{ product?.description | truncate: 100}}
-              </p>
-             </div>
             </div>
             <div class="flex align-items-center justify-content-between">
               <span class="text-2xl font-semibold">{{
@@ -148,3 +73,4 @@
     </ng-template>
   </p-dataView>
 </div>
+
