--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -45,6 +45,7 @@
         id="password"
         formControlName="password"
         styleClass="password"
+        [feedback]="false"
         pTooltip="{{ 'loginForm.passwordTooltip' | transloco }}"
       ></p-password>
       <label htmlFor="password">{{
